test2-2023-11-18.log
regress/test2.fir:247424:17: error: use of unknown declaration 'validif'
    tmp20070 <= validif(head(UInt<3>(6), 1), SInt<24>("b-11111101000010001010101"))
                ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 0.8029 seconds

  ----Wall Time----  ----Name----
    0.8008 ( 99.7%)  FIR Parser
    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    Parse OMIR
    0.7580 ( 94.4%)    Parse modules
    0.0021 (  0.3%)  Rest
    0.8029 (100.0%)  Total

{
  totalTime: 0.817,
  maxMemory: 154157056
}
